Added check-setup.bat